--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,8 @@
 		@@include('blocks/header.html')
 		<main>
 			@@include('blocks/discover.html')
+			@@include('blocks/partners.html')
+			@@include('blocks/popular.html')
 		</main>
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
